background alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,20 @@
 body {
   min-height: 100vh;
   font-family: "Fredoka", sans-serif;
-  background-image: url("assets/header.jpg");
-  background-position: center center;
+ /*  background-image: url("assets/header.jpg");
+  background-position: fixed;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  
+  
+}
+
+#background 
+{
+  position: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  
+  background-position: center;
 }
 
 .container {
@@ -203,6 +212,45 @@ nav {
 
 
 @media (width > 768px) {
+  .beauty__video 
+{
+  width: 100%;
+}
+
+.about__wrapper 
+{
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 100%;
+  margin-top: 80px;
+    margin-bottom: 80px;
+    position: relative;
+    border-radius: 20px;
+    /* box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+    overflow: hidden; */
+}
+
+
+
+
+
+.beauty__img-2nd 
+{
+  display: flex;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  height: 450px;
+  justify-content: center;
+  align-items: center;
+}
+
+.beauty-img4 
+{
+  width: 100px;
+  width: 100%;
+ height: 720px;
+}
   .nav__links > div li:not(:first-child) {
     display: block;
   }
@@ -485,6 +533,14 @@ label {
   border-radius: 20px;
   width: 100%;
   height: 100%;
+  height: 650px;
   justify-content: center;
   align-items: center;
+}
+
+.beauty-img4 
+{
+  border-radius: 20px;
+  width: 100%;
+ height: 720px;
 }
